ML14: minor changes

--- a/tests/test_window_attention.ipynb
+++ b/tests/test_window_attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ec58aa95",
    "metadata": {},
    "outputs": [
@@ -16,8 +16,8 @@
     }
    ],
    "source": [
-    "# import sys\n",
-    "# sys.path.append(\"C:/Studium/PML/Machine-Learning-Project\")\n",
+    "import sys\n",
+    "sys.path.append(\"C:/Studium/PML/Machine-Learning-Project\")\n",
     "\n",
     "import torch\n",
     "from src.models.swin.window_attention import WindowAttention\n",
@@ -26,10 +26,11 @@
     "dim = 96\n",
     "window_size = (7, 7)\n",
     "num_heads = 3\n",
-    "dropout = 0.5\n",
+    "attn_dropout = 0.1\n",
+    "proj_dropout = 0.2\n",
     "\n",
     "# Create the module\n",
-    "attn = WindowAttention(dim=dim, window_size=window_size, num_heads=num_heads, dropout=dropout)\n",
+    "attn = WindowAttention(dim=dim, window_size=window_size, num_heads=num_heads, attn_dropout=attn_dropout, proj_dropout=proj_dropout)\n",
     "\n",
     "# Dummy input\n",
     "B = 2                     # batch size\n",
@@ -66,10 +67,11 @@
     "dim = 96\n",
     "window_size = (7, 7)\n",
     "num_heads = 3\n",
-    "dropout = 0.5\n",
+    "attn_dropout = 0.1\n",
+    "proj_dropout = 0.2\n",
     "\n",
     "# Create the attention module\n",
-    "attn = WindowAttention(dim=dim, window_size=window_size, num_heads=num_heads, dropout=dropout)\n",
+    "attn = WindowAttention(dim=dim, window_size=window_size, num_heads=num_heads, attn_dropout=attn_dropout, proj_dropout=proj_dropout)\n",
     "\n",
     "# ---- Dummy input ----\n",
     "B = 2                                 # batch size\n",
